Update and added new stuffs

--- a/firebase.json
+++ b/firebase.json
@@ -21,6 +21,13 @@
       } ]
     } ],
     "cleanUrls": true,
+    "redirects": [
+      {
+        "source": "/blog.html",
+        "destination": "/blog/",
+        "type": 302
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
