--- a/firebase.json
+++ b/firebase.json
@@ -24,15 +24,15 @@
     "redirects": [
       {
         "source": "/blog.html",
-        "destination": "https://blog.mssneksu.com.ng",
-        "type": 302
+        "destination": "/blog/",
+        "type": 301
       }
     ],
     "redirects": [
       {
-        "source": "/blog./",
-        "destination": "/blog/",
-        "type": 302
+        "source": "/blog/",
+        "destination": "https://blog.mssneksu.com.ng",
+        "type": 301
       }
     ],
     "ignore": [
